# Ir192-Geant4

./: .gitignore  CMakeLists.txt  run.mac  vis.mac
analysis/: analysis.C  analysisSpectrum.C
include/: ActionInitialization.hh  DetectorConstruction.hh  Ir192Spectrum.hh  PrimaryGeneratorAction.hh  RunAction.hh  TrackingAction.hh
macros/: ir192.mac  run10k.mac  run1M.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  Ir192Spectrum.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
